--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -1,7 +1,7 @@
 name: CI Linux
 
 # Trigger this workflow on push or pull request
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
@@ -42,7 +42,7 @@ jobs:
         cp build/SSVOpenHexagon build/OHWorkshopUploader _RELEASE
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v4
       with:
         name: OpenHexagon-Linux
         path: _RELEASE
